"Termine los ejercicios del ciclo for"

--- a/Clase10_EjerciciosCicloFor (1) (1).ipynb
+++ b/Clase10_EjerciciosCicloFor (1) (1).ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -458,17 +458,20 @@
      "text": [
       "enero febrero marzo abril mayo junio julio agosto septiembre octubre noviembre diciembre  \n",
       "31 28 31 30 31 30 31 31 30 31 30 31  \n",
-      "Total pagado: 515.0\n",
-      "Valor pagado por concepto de recargos:15.0\n",
-      "mes con mayor cantidad de dias arrendado:('abril', 15)\n",
-      "mes con mayor ingreso:('marzo', 165.0)\n",
-      "mes con menos cantidad de dias arrendado:('enero', 3)\n",
-      "mes con menos ingreso:('febrero', 95.0)\n"
+      "Total pagado: 1587.0\n",
+      "Valor pagado por concepto de recargos:207.0\n",
+      "mes con mayor cantidad de dias arrendado:('febrero', 27)\n",
+      "mes con mayor ingreso:('enero', 840.0)\n",
+      "mes con menos cantidad de dias arrendado:('enero', 21)\n",
+      "mes con menos ingreso:('febrero', 540.0)\n"
      ]
     }
    ],
    "source": [
-    "año = int(input(\"Año del reporte\"))\n",
+    "year = int(input(\"Año del reporte\"))\n",
+    "\n",
+    "#Declaracion de variables\n",
+    "\n",
     "total_price_days  = 0\n",
     "price_4day = 0\n",
     "aditional_total = 0\n",
@@ -476,6 +479,8 @@
     "month_money = []\n",
     "days_ = 0\n",
     "aux = 0\n",
+    "aditional = 0\n",
+    "aditional_15porcent = 0\n",
     "last_max_month_days = 0\n",
     "last_min_month_days = 0\n",
     "month_with_max_days = \"\"\n",
@@ -485,8 +490,9 @@
     "month_money_max = \"\"\n",
     "month_money_min = \"\"\n",
     "\n",
-    "#sacar si un año es bisiesto\n",
-    "if año % 4 == 0 and (año % 100 != 0 or año % 400 == 0):\n",
+    "#Sacar si un año es bisiesto\n",
+    "if year % 4 == 0 and (year % 100 != 0 or year % 400 == 0):\n",
+    "    #Si es bisiesto (febrero tiene 29 dia):\n",
     "\n",
     "    month = [\"enero\", \"febrero\", \"marzo\", \"abril\",\"mayo\", \"junio\", \"julio\", \"agosto\",\"septiembre\", \"octubre\", \"noviembre\", \"diciembre\"],[31,29,31,30,31,30,31,31,30,31,30,31] \n",
     "    for i in range(len(month)):\n",
@@ -494,10 +500,71 @@
     "            print(\" \")\n",
     "        for j in range(12):\n",
     "            print(month[i][j], end= \" \")\n",
+    "    \n",
+    "    print(\" \")\n",
+    "    \n",
+    "    rented_months = int(input(\"Numero de meses que rentaste al menos 1 dia\"))\n",
+    "    #For que recorre el numero de meses que rento al menos 1 dia\n",
+    "    for i in range(rented_months):\n",
+    "        month_ = str(input(\"Mes en el que arrendo\"))\n",
+    "        #If para saber si ingresa un mes valido\n",
+    "        if month_ == \"enero\" or month_ == \"febrero\" or month_ == \"marzo\" or month_ == \"abril\" or month_ == \"junio\" or month_ == \"julio\" or month_ == \"agosto\" or month_ == \"septiembre\" or month_ == \"octubre\" or month_ == \"noviembre\" or month_ == \"diciembre\":\n",
+    "            #For que recorre todos los meses para saber cual es exactamente\n",
+    "            for j in range(12):\n",
+    "                if month_ == month[0][j]:\n",
+    "                    #Cuando vale el dia y cuantos se arrendo por el mes introducido anteriormente\n",
+    "                    day_inmonth = float(input(\"Cuanto vale un dia arrendado en este mes?\"))\n",
+    "                    days_ = int(input(\"Cuantos dias estuvo arrendado este mes?\"))\n",
+    "                    price_4day = day_inmonth * days_\n",
+    "                    \n",
+    "                    #Recargos, agregar valor final si ingresa dias validos (Ejemplo: si\n",
+    "                    # pone 30 dias en febrero, no lo agregara, ya que en Febrero en año bisiesto hay solo 29 dias)\n",
+    "                    if days_ >= 1 and days_ <= month[1][j]:\n",
+    "                        total_price_days = total_price_days + price_4day\n",
+    "                        if days_ > 10 and days_ < 21:\n",
+    "                            aditional = price_4day * 0.10\n",
+    "                            aditional_total = aditional_total + aditional\n",
+    "                        elif days_> 20:\n",
+    "                            aditional_15porcent = price_4day * 0.15\n",
+    "                            aditional_total = aditional_total + aditional_15porcent\n",
+    "                    else:\n",
+    "                        print(\"Numero mayor a los dias del mes, no valdra.\")\n",
+    "                    \n",
+    "                    #Logica para luego printear el mes con mas o menos X\n",
+    "                    month_money.append(price_4day + aditional)\n",
+    "                    month_days.append(days_)\n",
+    "                    if(month_money[i] > last_max_money):\n",
+    "                        last_max_money = month_money[i]\n",
+    "                        max_money_month = month_\n",
+    "                    if(last_min_money == 0 or month_money[i] < last_min_money):\n",
+    "                        last_min_money = month_money[i]\n",
+    "                        month_money_min = month_\n",
+    "                    if(month_days[i] > last_max_month_days):\n",
+    "                        last_max_month_days = month_days[i]\n",
+    "                        month_with_max_days = month_\n",
+    "                    if(last_min_month_days == 0 or month_days[i] < last_min_month_days):\n",
+    "                        last_min_month_days = month_days[i]\n",
+    "                        month_with_min_days = month_\n",
+    "        else:\n",
+    "            print(\"Este mes no existe\")\n",
+    "            \n",
+    "\n",
+    "    month_money.sort()\n",
+    "    month_days.sort() \n",
+    "\n",
+    "    print(f\"Total pagado: {total_price_days + aditional_total}\")\n",
+    "    print(f\"Valor pagado por concepto de recargos:{aditional_total}\")\n",
+    "    print(f\"mes con mayor cantidad de dias arrendado:{month_with_max_days, month_days[-1]}\")\n",
+    "    print(f\"mes con mayor ingreso:{max_money_month, month_money[-1]}\")\n",
+    "    print(f\"mes con menos cantidad de dias arrendado:{month_with_min_days, month_days[0]}\")\n",
+    "    print(f\"mes con menos ingreso:{month_money_min, month_money[0]}\")\n",
+    "\n",
     "else:\n",
+    "    #Si no es bisiesto (febrero tiene 28 dias):\n",
     "\n",
     "    month = [\"enero\", \"febrero\", \"marzo\", \"abril\",\"mayo\", \"junio\", \"julio\", \"agosto\",\"septiembre\", \"octubre\", \"noviembre\", \"diciembre\"],[31,28,31,30,31,30,31,31,30,31,30,31] \n",
     "\n",
+    "    #Print los meses con sus dias\n",
     "    for i in range(len(month)):\n",
     "        if i > 0:\n",
     "            print(\" \")  \n",
@@ -507,48 +574,49 @@
     "    print(\" \")\n",
     "\n",
     "    rented_months = int(input(\"Numero de meses que rentaste al menos 1 dia\"))\n",
-    "    if rented_months > 2:   \n",
-    "        for i in range(rented_months):\n",
-    "            month_ = str(input(\"Mes en el que arrendo\"))\n",
-    "            if month_ == \"enero\" or month_ == \"febrero\" or month_ == \"marzo\" or month_ == \"abril\" or month_ == \"junio\" or month_ == \"julio\" or month_ == \"agosto\" or month_ == \"septiembre\" or month_ == \"octubre\" or month_ == \"noviembre\" or month_ == \"diciembre\":\n",
-    "                for j in range(12):\n",
-    "                    if month_ == month[0][j]:\n",
-    "\n",
-    "                        day_inmonth = float(input(\"Cuanto vale un dia arrendado en este mes?\"))\n",
-    "                        days_ = int(input(\"Cuantos dias estuvo arrendado este mes?\"))\n",
-    "\n",
-    "                        price_4day = day_inmonth * days_\n",
-    "\n",
-    "                        if days_ >= 1 and days_ <= month[1][j]:\n",
-    "                            total_price_days = total_price_days + price_4day\n",
-    "                            if days_ > 10 and days_ < 21:\n",
-    "                                aditional = price_4day * 0.10\n",
-    "                                aditional_total = aditional_total + aditional\n",
-    "                            elif days_> 20:\n",
-    "                                aditional_15porcent = price_4day * 0.15\n",
-    "                                aditional_total = aditional_total + aditional\n",
-    "                        else:\n",
-    "                            print(\"Numero mayor a los dias del mes, no valdra.\")\n",
-    "\n",
-    "\n",
-    "                        month_money.append(price_4day + aditional)\n",
-    "                        month_days.append(days_)\n",
-    "                        if(month_money[i] > last_max_money):\n",
-    "                            last_max_money = month_money[i]\n",
-    "                            max_money_month = month_\n",
-    "                        if(last_min_money == 0 or month_money[i] < last_min_money):\n",
-    "                            last_min_money = month_money[i]\n",
-    "                            month_money_min = month_\n",
-    "                        if(month_days[i] > last_max_month_days):\n",
-    "                            last_max_month_days = month_days[i]\n",
-    "                            month_with_max_days = month_\n",
-    "                        if(last_min_month_days == 0 or month_days[i] < last_min_month_days):\n",
-    "                            last_min_month_days = month_days[i]\n",
-    "                            month_with_min_days = month_\n",
-    "            else:\n",
-    "                print(\"Este mes no existe\")\n",
-    "    else:\n",
-    "        print(\"Numero de meses menor a 3.\")\n",
+    "    #For que recorre el numero de meses que rento al menos 1 dia\n",
+    "    for i in range(rented_months):\n",
+    "        month_ = str(input(\"Mes en el que arrendo\"))\n",
+    "        #If para saber si ingresa un mes valido\n",
+    "        if month_ == \"enero\" or month_ == \"febrero\" or month_ == \"marzo\" or month_ == \"abril\" or month_ == \"junio\" or month_ == \"julio\" or month_ == \"agosto\" or month_ == \"septiembre\" or month_ == \"octubre\" or month_ == \"noviembre\" or month_ == \"diciembre\":\n",
+    "            #For que recorre todos los meses para saber cual es exactamente\n",
+    "            for j in range(12):\n",
+    "                if month_ == month[0][j]:\n",
+    "                    #Cuando vale el dia y cuantos se arrendo por el mes introducido anteriormente\n",
+    "                    day_inmonth = float(input(\"Cuanto vale un dia arrendado en este mes?\"))\n",
+    "                    days_ = int(input(\"Cuantos dias estuvo arrendado este mes?\"))\n",
+    "                    price_4day = day_inmonth * days_\n",
+    "                    \n",
+    "                    #Recargos, agregar valor final si ingresa dias validos (Ejemplo: si\n",
+    "                    # pone 29 dias en febrero, no lo agregara, ya que en Febrero no hay 29 dias)\n",
+    "                    if days_ >= 1 and days_ <= month[1][j]:\n",
+    "                        total_price_days = total_price_days + price_4day\n",
+    "                        if days_ > 10 and days_ < 21:\n",
+    "                            aditional = price_4day * 0.10\n",
+    "                            aditional_total = aditional_total + aditional\n",
+    "                        elif days_> 20:\n",
+    "                            aditional_15porcent = price_4day * 0.15\n",
+    "                            aditional_total = aditional_total + aditional_15porcent\n",
+    "                    else:\n",
+    "                        print(\"Numero mayor a los dias del mes, no valdra.\")\n",
+    "                    \n",
+    "                    #Logica para luego printear el mes con mas o menos X\n",
+    "                    month_money.append(price_4day + aditional)\n",
+    "                    month_days.append(days_)\n",
+    "                    if(month_money[i] > last_max_money):\n",
+    "                        last_max_money = month_money[i]\n",
+    "                        max_money_month = month_\n",
+    "                    if(last_min_money == 0 or month_money[i] < last_min_money):\n",
+    "                        last_min_money = month_money[i]\n",
+    "                        month_money_min = month_\n",
+    "                    if(month_days[i] > last_max_month_days):\n",
+    "                        last_max_month_days = month_days[i]\n",
+    "                        month_with_max_days = month_\n",
+    "                    if(last_min_month_days == 0 or month_days[i] < last_min_month_days):\n",
+    "                        last_min_month_days = month_days[i]\n",
+    "                        month_with_min_days = month_\n",
+    "        else:\n",
+    "            print(\"Este mes no existe\")\n",
     "            \n",
     "\n",
     "    month_money.sort()\n",
@@ -583,7 +651,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "056233c5d2ea3d18a75f8210bc1eaf1df52661ed480b04044a16cb89923f092d"
+    "hash": "107d7b120a5b68773a87d4067e673630b35702e55ebab3138143d08b1c4d7cbc"
    }
   }
  },
