"Acabe Taller Arreglos"

--- a/Clase18_EjerciciosArreglosUnidimensionales (1).ipynb
+++ b/Clase18_EjerciciosArreglosUnidimensionales (1).ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -260,39 +260,31 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m lista1 \u001b[39m=\u001b[39m []\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     number \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39;49m(\u001b[39minput\u001b[39;49m())\n\u001b[0;32m      5\u001b[0m     lista1\u001b[39m.\u001b[39mappend(number)\n\u001b[0;32m      7\u001b[0m lista2 \u001b[39m=\u001b[39m []\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0 + 2.0 = 4.0\n",
+      "3.0 + 3.0 = 6.0\n",
+      "4.0 + 4.0 = 8.0\n",
+      "5.0 + 5.0 = 10.0\n",
+      "10.0 + 20.0 = 30.0\n"
      ]
     }
    ],
    "source": [
     "lista1 = []\n",
     "\n",
-    "for i in range(1):\n",
+    "lista2 = []\n",
+    "lista3 = []\n",
+    "\n",
+    "\n",
+    "for i in range(5):\n",
     "    number = float(input())\n",
     "    lista1.append(number)\n",
-    "\n",
-    "lista2 = []\n",
-    "\n",
-    "for i in range(1):\n",
     "    number2 = float(input())\n",
     "    lista2.append(number2)\n",
-    "\n",
-    "lista3 = []\n",
-    "for i in range(1):\n",
-    "    number3 = float(input())\n",
-    "    lista3.append(number3)\n",
-    "\n",
-    "for i in range(1):\n",
-    "    if lista1[i] + lista2[i] == lista3[i]:\n",
-    "        print(\"Si son\")\n",
-    "\n"
+    "    lista3.append(lista1[i] + lista2[i])\n",
+    "    print(lista1[i], \"+\", lista2[i], \"=\", lista3[i])"
    ]
   },
   {
@@ -310,14 +302,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El estudiante: neithan es mayor de edad, su edad es: 20\n",
+      "El estudiante: esteban es mayor de edad, su edad es: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "switch_names = \"\"\n",
+    "age = 0\n",
+    "students_names = []\n",
+    "students_age = []\n",
+    "while switch_names != \"*\":\n",
+    "    switch_names = str(input(\"Otro nombre\"))\n",
+    "\n",
+    "    if switch_names ==  \"*\":\n",
+    "        break\n",
+    "\n",
+    "    else:\n",
+    "        students_names.append(switch_names)\n",
+    "        age = int(input(\"Edad\"))\n",
+    "        students_age.append(age)\n",
+    "\n",
+    "\n",
+    "for i in range(len(students_age)):\n",
+    "    if students_age[i] > 17:\n",
+    "        print(f\"El estudiante: {students_names[i]} es mayor de edad, su edad es: {students_age[i]}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,14 +355,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pollo Carne Salmon  \n",
+      "6000 1000 2000  \n",
+      "Esto no existe\n",
+      "Tus productos: ['Mozzarrella', 'Tomate', 'Carne', 'Salmon', 'Salmon']\n",
+      "Precio total: 5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "ingredients_available = [\"Pollo\", \"Carne\", \"Salmon\"]\n",
+    "ingredients_available_prices = [6000,1000,2000]\n",
+    "\n",
+    "for i in range(len(ingredients_available)):\n",
+    "    print(ingredients_available[i], end= \" \")\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "for i in range(len(ingredients_available_prices)):\n",
+    "    print(ingredients_available_prices[i], end= \" \")\n",
+    "\n",
+    "end = \"\"\n",
+    "ur_ingredients = [\"Mozzarrella\", \"Tomate\"]\n",
+    "total_price = 0\n",
+    "cont = 0\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "while end != \"*\":\n",
+    "    end = str(input())\n",
+    "    if end == \"Finalizar Pedido\":\n",
+    "        break\n",
+    "    else:\n",
+    "        for i in range(len(ingredients_available)):\n",
+    "            if end == ingredients_available[i]:\n",
+    "                ur_ingredients.append(end)\n",
+    "                total_price = total_price + ingredients_available_prices[i]\n",
+    "            else:\n",
+    "                cont += 1\n",
+    "                if cont == len(ingredients_available):\n",
+    "                    print(\"Esto no existe\")\n",
+    "print(f\"Tus productos: {ur_ingredients}\")\n",
+    "print(f\"Precio total: {total_price}\")"
+   ]
   }
  ],
  "metadata": {
@@ -364,7 +431,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "056233c5d2ea3d18a75f8210bc1eaf1df52661ed480b04044a16cb89923f092d"
+    "hash": "107d7b120a5b68773a87d4067e673630b35702e55ebab3138143d08b1c4d7cbc"
    }
   }
  },
