--- a/Clase22_Funciones (1).ipynb
+++ b/Clase22_Funciones (1).ipynb
@@ -429,6 +429,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Ejercicios 10\n",
     "\n",
@@ -437,10 +442,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[8, 6, 7, 6], [8, 6, 7, 6]]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def matrix_additions(A,B,C):\n",
+    "    D = []\n",
+    "    auxiliar = []\n",
+    "\n",
+    "    if len(A) == len(A[0]) and len(B) == len(B[0]) and len(C) == len(C[0]):\n",
+    "        for i in range(len(A)):\n",
+    "            for j in range(len(A)):\n",
+    "                auxiliar.append(A[i][j] + B[i][j] + C[i][j])\n",
+    "            D.insert(i, auxiliar)\n",
+    "        return D\n",
+    "    else:\n",
+    "        print(\"Error\")\n",
+    "    \n",
+    "matrix_additions(\n",
+    "    A = [[1,2],[2,3]],\n",
+    "    B = [[2,3],[3,2]],\n",
+    "    C = [[5,1],[2,1]]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
