"Tenia un error en un punto de for"

--- a/Clase10_EjerciciosCicloFor (1) (1).ipynb
+++ b/Clase10_EjerciciosCicloFor (1) (1).ipynb
@@ -278,39 +278,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Promedio del examen: 4.0\n",
+      "Promedio del examen: 2.75\n",
       "Mejor nota: 5.0\n",
-      "Peor nota: 3.0\n"
+      "Peor nota: 1.0\n",
+      "Estudiantes que ganaron: 2\n",
+      "Estudiantes que perdieron 2\n"
      ]
     }
    ],
    "source": [
-    "students = int(input())\n",
+    "students = int(input(\"Cuantos estudiantes son\"))\n",
     "allAv = 0\n",
     "students_notes_array = []\n",
-    "\n",
+    "cont1 = 0\n",
+    "cont2= 0\n",
     "for i in range(students):\n",
     "    students_notes = float(input())\n",
     "    students_notes_array.append(students_notes)\n",
     "    \n",
     "    if students_notes >= 0 and students_notes <= 5.0:\n",
     "        allAv = allAv +  students_notes \n",
+    "        if students_notes > 2.9:\n",
+    "            cont1 += 1\n",
+    "        if students_notes < 3.0:\n",
+    "            cont2 += 1\n",
     "    else:\n",
     "        print(\"Nota invalidad\")\n",
     "        break\n",
     "    \n",
-    "    ordernot = students_notes_array.sort()\n",
+    "ordernot = students_notes_array.sort()\n",
     "\n",
     "print(\"Promedio del examen:\", (allAv / students))\n",
     "print(\"Mejor nota:\",  students_notes_array[-1])\n",
-    "print(\"Peor nota:\", students_notes_array[0])"
+    "print(\"Peor nota:\", students_notes_array[0])\n",
+    "print(\"Estudiantes que ganaron:\" , cont1)\n",
+    "print(\"Estudiantes que perdieron\", cont2)"
    ]
   },
   {
