--- a/Clase22_Funciones (1).ipynb
+++ b/Clase22_Funciones (1).ipynb
@@ -442,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[8, 6, 7, 6], [8, 6, 7, 6]]"
+       "[[8, 6, 7, 6]]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,16 +460,15 @@
     "def matrix_additions(A,B,C):\n",
     "    D = []\n",
     "    auxiliar = []\n",
-    "\n",
-    "    if len(A) == len(A[0]) and len(B) == len(B[0]) and len(C) == len(C[0]):\n",
+    "    cont = 0\n",
+    "    if len(A[0]) == len(A[1]) and len(B[0]) == len(B[1]) and len(C[0]) == len(C[1]):\n",
     "        for i in range(len(A)):\n",
     "            for j in range(len(A)):\n",
     "                auxiliar.append(A[i][j] + B[i][j] + C[i][j])\n",
-    "            D.insert(i, auxiliar)\n",
+    "        D.insert(i, auxiliar)\n",
     "        return D\n",
     "    else:\n",
     "        print(\"Error\")\n",
-    "    \n",
     "matrix_additions(\n",
     "    A = [[1,2],[2,3]],\n",
     "    B = [[2,3],[3,2]],\n",
